refactor createGame event and findGame event